src/lexer/snapshots/tests__lex_bool.snap
---
source: src/lexer/mod.rs
expression: parsed
---
[
    RangedObject {
        inner: Keyword(
            Program,
        ),
        range: 0..7,
    },
    RangedObject {
        inner: Identifier(
            "fib",
        ),
        range: 8..11,
    },
    RangedObject {
        inner: Keyword(
            Begin,
        ),
        range: 12..17,
    },
    RangedObject {
        inner: Keyword(
            Var,
        ),
        range: 18..21,
    },
    RangedObject {
        inner: Identifier(
            "n",
        ),
        range: 22..23,
    },
    RangedObject {
        inner: Operator(
            Assignement,
        ),
        range: 24..26,
    },
    RangedObject {
        inner: Literal(
            Boolean(
                true,
            ),
        ),
        range: 27..31,
    },
    RangedObject {
        inner: Punctuation(
            Semicolon,
        ),
        range: 31..32,
    },
    RangedObject {
        inner: Keyword(
            End,
        ),
        range: 33..36,
    },
]
