src/lexer/snapshots/tests__lex_example.snap
---
source: src/lexer/mod.rs
expression: res
---
[
    RangedObject {
        inner: Punctuation(
            BracketOpen,
        ),
        range: 0..1,
    },
    RangedObject {
        inner: Identifier(
            "x",
        ),
        range: 1..2,
    },
    RangedObject {
        inner: Operator(
            LesserOrEquals,
        ),
        range: 3..5,
    },
    RangedObject {
        inner: Operator(
            GreaterThan,
        ),
        range: 6..7,
    },
    RangedObject {
        inner: Operator(
            GreaterOrEquals,
        ),
        range: 8..10,
    },
    RangedObject {
        inner: Operator(
            LesserThan,
        ),
        range: 11..12,
    },
    RangedObject {
        inner: Identifier(
            "y",
        ),
        range: 13..14,
    },
    RangedObject {
        inner: Literal(
            Integer(
                99,
            ),
        ),
        range: 15..17,
    },
    RangedObject {
        inner: Error(
            UnknownChar(
                '.',
            ),
        ),
        range: 17..18,
    },
    RangedObject {
        inner: Literal(
            Integer(
                88,
            ),
        ),
        range: 18..20,
    },
    RangedObject {
        inner: Identifier(
            "l8",
        ),
        range: 20..22,
    },
    RangedObject {
        inner: Punctuation(
            BracketClose,
        ),
        range: 23..24,
    },
]
