src/lexer/snapshots/tests__lex_types.snap
---
source: src/lexer/mod.rs
expression: parsed
---
[
    RangedObject {
        inner: Type(
            Boolean,
        ),
        range: 0..4,
    },
    RangedObject {
        inner: Punctuation(
            Tilde,
        ),
        range: 5..6,
    },
    RangedObject {
        inner: Type(
            Str,
        ),
        range: 7..10,
    },
    RangedObject {
        inner: Punctuation(
            Semicolon,
        ),
        range: 10..11,
    },
    RangedObject {
        inner: Type(
            Integer,
        ),
        range: 12..15,
    },
]
