src/lexer/snapshots/tests__scan_comment.snap
---
source: src/lexer/scanner.rs
expression: res
---
[
    RangedObject {
        inner: Comment(
            "some comment",
        ),
        range: 0..16,
    },
]
