src/lexer/snapshots/tests__scan_example_multiline.snap
---
source: src/lexer/scanner.rs
expression: res
---
[
    RangedObject {
        inner: Rest(
            "(x",
        ),
        range: 0..2,
    },
    RangedObject {
        inner: Rest(
            "<=",
        ),
        range: 3..5,
    },
    RangedObject {
        inner: Rest(
            ">",
        ),
        range: 6..7,
    },
    RangedObject {
        inner: Rest(
            ">=",
        ),
        range: 8..10,
    },
    RangedObject {
        inner: Rest(
            "<",
        ),
        range: 11..12,
    },
    RangedObject {
        inner: Rest(
            "y",
        ),
        range: 13..14,
    },
    RangedObject {
        inner: Rest(
            "99.88l8",
        ),
        range: 15..22,
    },
    RangedObject {
        inner: Rest(
            ")",
        ),
        range: 23..24,
    },
    RangedObject {
        inner: Rest(
            "x",
        ),
        range: 25..26,
    },
    RangedObject {
        inner: Rest(
            ")",
        ),
        range: 27..28,
    },
    RangedObject {
        inner: Rest(
            "(",
        ),
        range: 29..30,
    },
    RangedObject {
        inner: Rest(
            ">=",
        ),
        range: 31..33,
    },
    RangedObject {
        inner: Rest(
            "y",
        ),
        range: 34..35,
    },
]
